# Loacl_App

./: .gitignore  AGENTS.md  README.md  document.md  eslint.config.js  index.html  lint_output.txt  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/resources/templates/context/: README.md
src-tauri/resources/templates/contradiction/: README.md
src-tauri/resources/templates/formats/: README.md
src-tauri/resources/templates/sense/: README.md
src-tauri/src/: apis.rs  install.wxs  lib.rs  main.rs  models.rs  prompt.rs  secure_store.rs  settings.rs  state.rs  store.rs  template.rs
src-tauri/src/ai_services/: artifact_parser.rs  context_builders.rs  contradiction_loader.rs  mod.rs
src-tauri/src/apis/: ai_character.rs  ai_client.rs  ai_contradiction.rs  ai_summary.rs  app_settings.rs  map_persistence.rs  mod.rs  plugins.rs  webview_control.rs  worldflow.rs
src-tauri/src/apis/ai_client/: common.rs  media.rs  mod.rs  plugins.rs  sessions.rs  tools.rs  usage.rs
src-tauri/src/apis/plugins/: local.rs  market.rs  mod.rs  remote.rs
src-tauri/src/apis/worldflow/: categories.rs  common.rs  entries.rs  ideas.rs  (+8 more)
src-tauri/src/layout/: cluster.rs  component_graph.rs  constants.rs  engine.rs  mod.rs  params.rs  prepare.rs  resolved_params.rs  types.rs
src-tauri/src/map/: coastline.rs  constants.rs  geometry.rs  service.rs  types.rs
src-tauri/src/reports/: contradiction_report.rs  mod.rs  summary_result.rs
src-tauri/src/senses/: app_sense.rs  character_sense.rs  contradiction_sense.rs  mod.rs
src-tauri/src/tools/: category_tools.rs  edit_tools.rs  entry_tools.rs  mod.rs  project_tools.rs  registry.rs  web_tools.rs
(+127 files in other folders)
