[package]
name = "FlowCloudAI"
version = "0.1.0"
description = "A Tauri App"
authors = ["CUREDFSZ"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.82.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
log = "0.4.29"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log =  "2.7.1"
tauri-plugin-http = { version = "2.5.4", features = ["json"] }
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
